--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
-{      
-       "ip":"minecraft9and11.aternos.me",
-       "port": "44605",
-       "name": "minecraft9and11"
-}
+{    
+      "ip":"Hi0056789.aternos.me",
+      "port":"26100",
+      "name":"tharun007ff"
+}  
